--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <p>Hello world</p>
+    <p>Hellogit </p>
 
 
     <script src="script.js"></script>
